Reduced bottom margin to avoid scrollbar on static pages

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -20,7 +20,7 @@ body > .container {
 }
 
 .container .text-muted {
-	margin: 20px 0;
+	margin: 10px 0;
 }
 
 .footer > .container {
